--- a/styles/style.css
+++ b/styles/style.css
@@ -32,10 +32,10 @@
 }
 
 .icons{
-    font-size: 250px;
-    margin-left: 10px;
-    margin-right: 10px;
+    font-size: 50px;
+    align: center;
 }
+
 
 .languages{
     align: center;
