--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,4 @@
-.navbar-inner {
-    background-color:transparent;
-}
- 
-@media (min-width: 768px) {
-  .navbar-nav {
-    width: 100%;
-    text-align: center;
-  }
-  .navbar-nav > li {
-    float: none;
-    display: inline-block;
-  }
-  .navbar-nav > li.navbar-right {
-    float: right !important;
-  }
-}
+
 
 .divider {
     color: white;
@@ -40,4 +24,48 @@
 
 .languages{
 }
-
+/* new line */
+body {
+    font: 20px Montserrat, sans-serif;
+    line-height: 1.8;
+    color: #f5f6f7;
+}
+p {font-size: 16px;}
+.margin {margin-bottom: 45px;}
+.bg-1 { 
+    background-color: #1abc9c; /* Green */
+    color: #ffffff;
+}
+.bg-2 { 
+    background-color: #474e5d; /* Dark Blue */
+    color: #ffffff;
+    height: auto;
+}
+.bg-3 { 
+    background-color: #27ae60; /* White */
+    color: #ffffff;
+}
+.bg-4 { 
+    background-color: #ffffff; /* White */
+    color: #555555;
+}
+.bg-5 { 
+    background-color: #2f2f2f; /* Black Gray */
+    color: #fff;
+}
+.container-fluid {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+.navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    letter-spacing: 5px;
+}
+.navbar-nav  li a:hover {
+    color: #1abc9c !important;
+}
