--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@
 body {
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
-    color: #f5f6f7;
+    color: white;
 }
 p {font-size: 16px;}
 .margin {margin-bottom: 45px;}
@@ -42,12 +42,12 @@ p {font-size: 16px;}
     height: auto;
 }
 .bg-3 { 
-    background-color: #27ae60; /* White */
+    background-color: #f39c12; /* White */
     color: #ffffff;
 }
 .bg-4 { 
-    background-color: #ffffff; /* White */
-    color: #555555;
+    background-color: #ffffff   ; /* #ffffff White */
+    color: #474e5d;
 }
 .bg-5 { 
     background-color: #2f2f2f; /* Black Gray */
@@ -65,7 +65,5 @@ p {font-size: 16px;}
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
-}
-.navbar-nav  li a:hover {
-    color: #1abc9c !important;
+    
 }
